--- a/hushtweet/package.json
+++ b/hushtweet/package.json
@@ -16,6 +16,8 @@
     "@ionic/pwa-elements": "^3.0.1",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
+    "@stomp/stompjs": "^6.1.0",
+    "@types/stompit": "^0.26.2",
     "@vueuse/core": "^4.0.0-rc.8",
     "animate.css": "^4.1.1",
     "cache": "^2.3.1",
@@ -27,9 +29,11 @@
     "date-fns": "^2.16.1",
     "gun": "0.9.9999991",
     "javascript-time-ago": "^2.3.3",
+    "kaazing-javascript-jms-client": "^4.4.2",
     "oauth-1.0a": "^2.2.6",
     "openpgp": "4.7.2",
     "querystring": "^0.2.0",
+    "queue-typescript": "^1.0.1",
     "ramda": "^0.27.1",
     "textarea-caret": "^3.1.0",
     "twitter-text": "^3.1.0",
@@ -44,6 +48,7 @@
     "@capacitor/cli": "2.4.2",
     "@types/javascript-time-ago": "^2.0.1",
     "@types/jest": "^24.0.19",
+    "@types/sockjs-client": "^1.5.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
